--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-clipboard.js": "^2.0.16",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-lazyload": "^3.2.0",
     "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
