--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^4.6.0",
     "react-lazyload": "^3.2.0",
     "react-modal": "^3.16.1",
+    "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
     "web-vitals": "^2.1.4"
